<resources>
    <string name="app_name">RefFamily</string>
    <string name="map_api_key">AIzaSyDWL4T8WERSHrXQ464jk8pKQf_0WLiDbgE</string>
    <string name="search_key">AIzaSyDWL4T8WERSHrXQ464jk8pKQf_0WLiDbgE</string>
    <string name="choose_language">Choose Language</string>
    <string name="next">Next</string>
    <string name="code">Code</string>
    <string name="login">Login</string>
    <string name="download_customer_app">Dowanload Customer App</string>
    <string name="skip">Skip</string>
    <string name="confirm">Confirm</string>
    <string name="phone_number">Phone Number</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">InValid Email</string>
    <string name="choose_banner">Choose Baaner</string>
    <string name="profile_image">Profile Image</string>
    <string name="banner">Banner</string>
    <string name="ipan_number_length_error">Ipan Number Length Error</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="ipan_number">Ipan Number</string>
    <string name="category">Category</string>
    <string name="select_location_on_map">Select Location On Map</string>
    <string name="something">Palease Check Internet Connection</string>
    <string name="country_code">Country Code</string>
    <string name="failed">Failed</string>
    <string name="wait">Wait</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="code_verification">Code Verfication</string>
    <string name="enter_code_sent_to">Enter Code Sent To You</string>
    <string name="inv_code">Invalid Code</string>
    <string name="resend_in">Resend In</string>
    <string name="resend">Resend</string>
    <string name="phone_found">Phone Found</string>
    <string name="email_found">Email Found</string>
    <string name="sign_up">SignUp</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="address">Address</string>
    <string name="orders">Orders</string>
    <string name="offers">Offers</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="no_data_to_view">No Data To View</string>
    <string name="you_must_subscribe_to_get_orders">You Must Subscribe To get Orders</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="sar">SAR</string>
    <string name="show_phone_number">Show Phone Number</string>
    <string name="balance">Balance</string>
    <string name="total_delivery_fee">Total Delivery Fee</string>
    <string name="users_feedback">User FeedBack</string>
    <string name="adjustments">Adjustments</string>
    <string name="departments">Departmnets</string>
    <string name="subscriptions">SubScriptions</string>
    <string name="notification_tone">Notification Tone</string>
    <string name="default1">Default</string>
    <string name="language_settings">Language Setting</string>
    <string name="privacy">Privacy</string>
    <string name="about_app">About App</string>
    <string name="profile">Profile</string>
    <string name="terms_of_service">Terms Of Service</string>
    <string name="contactus">ContactUS</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">RateApp</string>
    <string name="logout">Logout</string>
    <string name="addproduct">AddProduct</string>
    <string name="product_images">Product Images</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="main_image_required">Main Image Required</string>
    <string name="update">Update</string>
    <string name="upload_image">Upload Image</string>
    <string name="department">Department</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="not_found">Not found</string>
    <string name="found">Found</string>
    <string name="discount_type">Disount Type</string>
    <string name="per">Per</string>
    <string name="value">Value</string>
    <string name="discount_percentage">Discount Precentage</string>
    <string name="price_after_discount">Price After Discount</string>
    <string name="date_from">Date From</string>
    <string name="date_to">Date To</string>
    <string name="product_update">Product Update</string>
    <string name="details">Detials</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="expire_date">Expire Date</string>
    <string name="before_discount">Before Discount</string>
    <string name="after_discount">After Discount</string>
    <string name="Add_subCategory">Add  Category</string>
    <string name="department_image">Department Image</string>
    <string name="category_desc">Category Desc</string>
    <string name="send">Send</string>
    <string name="suc">Sucess</string>
    <string name="flirt">Flirt</string>
    <string name="rude">Rude</string>
    <string name="smoked">Smoked</string>
    <string name="late">Late</string>
    <string name="not_adhering">Not adhering to health instructions</string>
    <string name="get_angry">Get angry</string>
    <string name="fast_service">Fast Service</string>
    <string name="respectable">Respectable</string>
    <string name="professional">Professional</string>
    <string name="responsive">Responsive</string>
    <string name="someting_dont_like">Something don\'t like happened?</string>
    <string name="something_you_like">Something you like more?</string>
    <string name="no_feedback_to_show">No FeedBack To Show</string>
    <string name="comments">Comments</string>
    <string name="buy">Buy</string>
</resources>