<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.apps.reffamily.models.AddProductModel.Data" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities_fragments.activity_add_Product.fragments.Fragment_AddProductStep2">


        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray0"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <ImageView
                        android:id="@+id/star1"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/ic_star"
                        android:tint="@color/color_red"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_department"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/department"
                        android:textSize="14sp"
                        app:layout_constraintStart_toEndOf="@id/star1"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <FrameLayout
                    android:id="@+id/department_layout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/small_stroke_primary"
                    android:padding="5dp">


                    <Spinner
                        android:id="@+id/spinnerCategory"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"

                        />


                </FrameLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <ImageView
                        android:id="@+id/star2"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/ic_star"
                        android:tint="@color/color_red"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:padding="4dp"
                        android:text="@string/price"
                        android:textSize="14sp"
                        app:layout_constraintStart_toEndOf="@id/star2"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <EditText
                    android:id="@+id/et_offer_price"
                    error="@{model.error_old_price}"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/small_stroke_primary"
                    android:inputType="numberDecimal"
                    android:padding="5dp"
                    android:text='@={model.old_price}' />

                <TextView
                    android:id="@+id/tv_discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:padding="4dp"
                    android:text="@string/discount"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/linear_discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/not_found_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_bg"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/not_found"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/found_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/small_stroke_primary"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/found"
                        android:textAllCaps="false" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/found_notfound_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <ImageView
                            android:id="@+id/star0"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:src="@drawable/ic_star"
                            android:tint="@color/color_red"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_discount_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/discount_type"
                            android:textSize="14sp"
                            app:layout_constraintStart_toEndOf="@id/star0"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <RadioGroup
                        android:id="@+id/radio_group_discount_type"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/small_stroke_primary"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/per"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/per" />

                        <RadioButton
                            android:id="@+id/value"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/value" />
                    </RadioGroup>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <ImageView
                            android:id="@+id/star3"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:src="@drawable/ic_star"
                            android:tint="@color/color_red"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_discount_percentage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/discount_percentage"
                            android:textSize="14sp"
                            app:layout_constraintStart_toEndOf="@id/star3"
                            app:layout_constraintTop_toTopOf="@id/star3" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <EditText
                        android:id="@+id/et_discount_percentage"
                        error="@{model.error_offer_value}"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/small_stroke_primary"
                        android:inputType="numberDecimal"
                        android:padding="5dp"
                        android:text='@={model.offer_value}' />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/tv_price_after_discount_value"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/small_stroke_primary"
                            android:visibility="gone"
                            tools:ignore="RtlCompat" />

                        <TextView
                            android:id="@+id/tv_price_after_discount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="4dp"
                            android:text="@string/price_after_discount"
                            android:textSize="14sp"
                            android:visibility="gone" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/tv_date_from"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:padding="4dp"
                            android:layout_weight="1"
                            android:text="@string/date_from"
                            android:textSize="14sp" />
                        <TextView
                            android:id="@+id/tv_date_to"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_weight="1"
                            android:padding="4dp"
                            android:text="@string/date_to"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toTopOf="@id/linear_date_to"
                            app:layout_constraintStart_toStartOf="@id/linear_date_to" />
                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <LinearLayout
                            android:id="@+id/linear_date_from"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/small_stroke_primary"
                            app:layout_constraintEnd_toStartOf="@id/linear_date_to"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_margin="5dp"
                                android:src="@drawable/ic_calendar"
                                android:tint="@color/gray6" />

                            <TextView
                                android:id="@+id/date_from_value"
                                error="@{model.error_offer_started_at}"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linear_date_to"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/small_stroke_primary"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/linear_date_from"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_margin="5dp"
                                android:src="@drawable/ic_calendar"
                                android:tint="@color/gray6" />

                            <TextView
                                android:id="@+id/date_to_value"
                                error="@{model.error_offer_finished_at}"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"

                                android:gravity="center" />
                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>


                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</layout>