<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.apps.reffamily.models.AddProductModel.Data" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="16dp">


        <ImageView
            android:id="@+id/star1"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_star"
            android:tint="@color/color_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/price"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/star1"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/small_stroke_primary"
            android:text='@={""+model.price}'
            android:textAlignment="viewStart"
            android:textSize="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_price"

            tools:ignore="RtlCompat" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/update_pice_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_price">

            <ImageView
                android:id="@+id/star3"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_star"
                android:tint="@color/color_red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_discount_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/discount_percentage"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/star3"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/et_discount_percentage"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/small_stroke_primary"
                android:text='@={model.offer_value}'
                app:layout_constraintEnd_toStartOf="@id/tv_price_after_discount_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_discount_percentage" />

            <TextView
                android:id="@+id/tv_price_after_discount_value"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/small_stroke_primary"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/et_discount_percentage"
                app:layout_constraintTop_toTopOf="@id/et_discount_percentage"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/tv_price_after_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/price_after_discount"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/tv_price_after_discount_value"
                app:layout_constraintStart_toStartOf="@id/tv_price_after_discount_value" />

            <TextView
                android:id="@+id/tv_date_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="4dp"
                android:text="@string/date_from"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_discount_percentage" />

            <LinearLayout
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_date_from">

                <LinearLayout
                    android:id="@+id/linear_date_from"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/small_stroke_primary">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/ic_calendar"
                        android:tint="@color/gray6" />

                    <TextView
                        android:id="@+id/date_from_value"
                        error="@{model.error_offer_started_at}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text='@{model.offer_started_at}' />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_date_to"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/small_stroke_primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/linear_date_from"
                    app:layout_constraintTop_toBottomOf="@id/tv_date_from">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/ic_calendar"
                        android:tint="@color/gray6" />

                    <TextView
                        android:id="@+id/date_to_value"
                        error="@{model.error_offer_finished_at}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text='@{model.offer_finished_at}' />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_date_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="172dp"
                android:padding="4dp"
                android:text="@string/date_to"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/date"
                app:layout_constraintStart_toStartOf="@id/date"
                tools:ignore="RtlCompat" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/update_pice_layout"

            ></Button>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>